--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="../lib/jasmine-2.8.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../src/Player.js"></script>
+  <script src="../src/game.js"></script>
 
   <!-- include spec files here... -->
-  <script src="SpecHelper.js"></script>
+  <script src="gameSpec.js"></script>
 
 </head>
 
