--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="../src/game.js"></script>
+  <script src="../src/player.js"></script>
 
   <!-- include spec files here... -->
   <script src="gameSpec.js"></script>
+  <script src="playerSpec.js"></script>
 
 </head>
 
