added board class

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script src="../src/game.js"></script>
   <script src="../src/player.js"></script>
+  <script src="../src/board.js"></script>
 
   <!-- include spec files here... -->
   <script src="gameSpec.js"></script>
   <script src="playerSpec.js"></script>
+  <script src="boardSpec.js"></script>
 
 </head>
 
