added game ending logic

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -15,11 +15,13 @@
   <script src="../src/game.js"></script>
   <script src="../src/player.js"></script>
   <script src="../src/board.js"></script>
+  <script src="../src/ref.js"></script>
 
   <!-- include spec files here... -->
   <script src="gameSpec.js"></script>
   <script src="playerSpec.js"></script>
   <script src="boardSpec.js"></script>
+  <script src="refSpec.js"></script>
 
 </head>
 
