--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./src/game.js"></script>
     <script src="./src/board.js"></script>
     <script src="./src/player.js"></script>
+    <script src="./src/ref.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
