extracted validator class

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -16,12 +16,14 @@
   <script src="../src/player.js"></script>
   <script src="../src/board.js"></script>
   <script src="../src/ref.js"></script>
+  <script src="../src/validator.js"></script>
 
   <!-- include spec files here... -->
   <script src="gameSpec.js"></script>
   <script src="playerSpec.js"></script>
   <script src="boardSpec.js"></script>
   <script src="refSpec.js"></script>
+  <script src="validatorSpec.js"></script>
 
 </head>
 
