ongoing refactoring. Added feature tests

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./src/board.js"></script>
     <script src="./src/player.js"></script>
     <script src="./src/ref.js"></script>
+    <script src="./src/validator.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
