--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -24,7 +24,7 @@
   <script src="boardSpec.js"></script>
   <script src="refSpec.js"></script>
   <script src="validatorSpec.js"></script>
-
+  <script src="featuresSpec.js"></script>
 </head>
 
 <body>
